# nginx-scale-PT

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
reverse_proxy/: nginx.conf
src/: main.py
src/api/v1/: __init__.py  rules.py  values.py
src/core/: constants.py  logger.py
src/core/config/: app_settings.py  redis_settings.py
src/db/: redis.py
src/schemas/: __init__.py  rules.py  values.py
src/services/: redis_base.py  rules.py  values.py
